--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
