--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -18,11 +18,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.9"
+    "mongoose": "^5.12.9",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "jest": {
     "testEnvironment": "node"
