--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "jsonschema": "^1.4.0",
+    "proptypes": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
