--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -15,6 +15,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "lint": "eslint ."
   },
   "dependencies": {
