--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "deep-freeze": "^0.0.1",
     "eslint": "^7.26.0",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint-plugin-react": "^7.23.2",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
