--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -p3001 --watch db.json"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +44,7 @@
     "deep-freeze": "^0.0.1",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
+    "json-server": "^0.16.3",
     "redux-devtools-extension": "^2.13.9"
   }
 }
