--- a/part7/bloglist-2.0/package.json
+++ b/part7/bloglist-2.0/package.json
@@ -17,7 +17,9 @@
     "mongoose-unique-validator": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
