fix cypress scripts

--- a/part7/bloglist-2.0/package.json
+++ b/part7/bloglist-2.0/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "cypress": "^7.3.0",
+    "deep-freeze": "^0.0.1",
     "eslint": "^7.26.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^24.3.6",
@@ -49,8 +50,8 @@
     "start:test": "cross-env NODE_ENV=test node index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint .",
-    "cypress:open": "cypress open",
-    "test:e2e": "cypress run",
+    "cypress:open": "cypress open --project client",
+    "test:e2e": "cypress run --project client",
     "build": "webpack --mode=development",
     "start:ui": "webpack serve --mode=development"
   },
