--- a/part7/bloglist-2.0/package.json
+++ b/part7/bloglist-2.0/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -39,6 +40,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "redux-devtools-extension": "^2.13.9",
     "supertest": "^6.1.3",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
