--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maximilian Eckenbach",
@@ -12,5 +13,8 @@
   "dependencies": {
     "apollo-server": "^2.25.0",
     "graphql": "^15.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
