--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.25.0",
+    "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.12",
     "mongoose-unique-validator": "^2.0.3"
   },
