--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -14,6 +14,7 @@
   "author": "Maximilian Eckenbach",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
@@ -22,6 +23,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
