--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jsonschema": "^1.1.1",
     "@types/lodash": "^4.14.170",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
@@ -26,6 +28,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "lodash": "^4.17.21"
+    "jsonschema": "^1.4.0",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
   }
 }
