--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ext .ts .",
     "start": "node build/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "schema": "typescript-json-schema src/types.ts NewPatient --required --out src/schemas/NewPatient.json",
+    "schema": "ts-node-dev src/generateSchemata.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,12 +24,13 @@
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "typescript-json-schema": "^0.50.1"
   },
   "dependencies": {
+    "ajv": "^8.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonschema": "^1.4.0",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   }
